--- a/app.css
+++ b/app.css
@@ -70,7 +70,7 @@ p {
     height: 100%;
     min-height: 50px;
     -webkit-appearance: none;
-    background: transparent;
+    background: rgba(255,255,255,0);
     border: solid 0px rgba(255,255,255,0);
     font-size: 2rem;
     line-height: 4rem;
@@ -78,6 +78,9 @@ p {
 }
 input:focus {
     outline: 0;
+}
+input:-internal-autofill-selected {
+    background-color: rgba(255,255,255,0) !important;
 }
 #submit {
     position: absolute;
@@ -102,6 +105,15 @@ input:focus {
     transform: translate(0,0);
     overflow: hidden;
     transition: width 0.14s 1.2s ease-in;
+}
+.loaded #clone {
+    position: absolute;
+    right: 0;
+    top: 0;
+    opacity: 1;
+    transform: translate(0,0);
+    overflow: hidden;
+    display: block;
 }
 .halved #app:after {
     content: '';
@@ -146,4 +158,15 @@ input:focus {
     width: 100%;
     height: 100%;
     overflow: auto;
+}
+#clone {
+    display: none;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
 }
