--- a/app.css
+++ b/app.css
@@ -22,6 +22,18 @@ body {
     width: 100%;
     height: 100%;
 }
+#app:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background: url(bg.jpg) left top no-repeat;
+    background-size: cover;
+    z-index: 0;
+}
 
 #loader {
     position: absolute;
@@ -145,6 +157,21 @@ input:-internal-autofill-selected {
 
 .halved #site {
     width: 50%;
+}
+
+#clone canvas {
+    background:transparent;
+}
+.loading #app:after {
+    content: '';
+    background: rgba(0,0,0,0.8) url(ajax-loader.gif) center center no-repeat;
+    background-size: 32px auto;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 10000;
 }
 
 #site {
